[polish] Dusted off the repo: upgraded gradlew, jdk, dependencies