@@ -2,7 +2,6 @@ package com.att.training.generics.exercises;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static com.att.training.generics.exercises.Numbers.sum;
@@ -24,7 +23,7 @@ class NumbersTest {
 
     @Test
     void givenListOfDoubles_shouldReturnSum() {
-        List<Double> numbers = Arrays.asList(1.2, 2.3, 3.4);
+        List<Double> numbers = List.of(1.2, 2.3, 3.4);
         double result = sum(numbers);
         assertThat(result).isEqualTo(6.9);
     }
@@ -32,7 +31,7 @@ class NumbersTest {
     // After fixing method Mammals.sum(), uncomment the commented lines here and make sure the test passes
     @Test
     void givenListOfIntegers_shouldReturnSum() {
-        List<Integer> numbers = Arrays.asList(1, 2, 3);
+        List<Integer> numbers = List.of(1, 2, 3);
 //        double result = sum(numbers);
 //        assertThat(result).isEqualTo(6.0);
     }
